--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,22 @@
 url= https://demo.guru99.com/test/newtours/
 user=smarttech
 password=student
+
+url= https://demo.guru99.com/test/newtours/
+user1=shishir
+password1=shishir100
+
+url= https://demo.guru99.com/test/newtours/
+user3=likhonfarazi
+password3=Likhon9329
+
+triptype = oneway
+passcount = 2
+depart = new york;
+departMonth = march
+departDay = 14
+arrive = london
+arriveMonth = march
+arriveday = 14
+flightClass = first class
+airline = unified airlines
