--- a/config.properties
+++ b/config.properties
@@ -11,12 +11,12 @@ user3=likhonfarazi
 password3=Likhon9329
 
 triptype = oneway
-passcount = 2
+passcount = 4
 depart = new york;
 departMonth = march
 departDay = 14
 arrive = london
 arriveMonth = march
 arriveday = 14
-flightClass = first class
+flightClass = business class
 airline = unified airlines
